# lifxpy

./: .gitignore  LIFXrary.py  Pipfile  README.md  pyproject.toml  reference.md  setup.py  tests_LIFXrary.py
lifxpy/: LIFXrary.py  main.py  test_main.py  tests_LIFXrary.py
